--- a/AutoRest/Generators/Java/Java/Templates/ServiceClientInterfaceTemplate.cshtml
+++ b/AutoRest/Generators/Java/Java/Templates/ServiceClientInterfaceTemplate.cshtml
@@ -10,10 +10,6 @@
 
 package @(Settings.Namespace.ToLower());
 @EmptyLine
-@if (Settings.AddCredentials)
-{
-@:import com.microsoft.rest.credentials.ServiceClientCredentials;
-}
 @foreach (var importClass in Model.InterfaceImports)
 {
 @:import @importClass;
@@ -29,27 +25,25 @@ public interface @Model.Name {
      * @@return The BaseUri value.
      */
     String getBaseUri();
-@if (Settings.AddCredentials)
+@foreach (var property in Model.Properties)
 {
 @EmptyLine
-@:    void setCredentials(ServiceClientCredentials credentials);
+@:    /**
+@:     * Gets @(property.Documentation).
+@:     *
+@:     * @@return the @(property.Name) value.
+@:     */
+@:    @property.Type get@(property.Name.ToPascalCase())();
+if(!property.IsReadOnly)
+{
+@EmptyLine    
+@:    /**
+@:     * Sets @(property.Documentation).
+@:     *
+@:     * @@param @(property.Name.ToCamelCase()) the @(property.Name) value.
+@:     */
+@:    void set@(property.Name.ToPascalCase())(@(property.Type) @(property.Name.ToCamelCase()));
 }
-@foreach (var param in Model.Properties)
-{
-@EmptyLine
-@:    /**
-@:     * Gets @(param.Documentation).
-@:     *
-@:     * @@return the @(param.Name) value.
-@:     */
-@:    @param.Type get@(param.Name.ToPascalCase())();
-@EmptyLine
-@:    /**
-@:     * Sets @(param.Documentation).
-@:     *
-@:     * @@param @(param.Name.ToCamelCase()) the @(param.Name) value.
-@:     */
-@:    void set@(param.Name.ToPascalCase())(@(param.Type) @(param.Name.ToCamelCase()));
 }
 
 @foreach (var operation in Model.Operations)
