--- a/AutoRest/Generators/NodeJS/NodeJS/Templates/MethodJsonPipelineTemplate.cshtml
+++ b/AutoRest/Generators/NodeJS/NodeJS/Templates/MethodJsonPipelineTemplate.cshtml
@@ -46,61 +46,13 @@ return client.pipeline(httpRequest, function (err, response, responseBody) {
       <text>
   // Deserialize Response
   if (statusCode === @MethodTemplateModel.GetStatusCodeReference(responsePair.Key)) {
-    var parsedResponse = null;
-    try {
-      parsedResponse = JSON.parse(responseBody);
-  @if (Model.ReturnType is CompositeType)
-  {
-      if (!string.IsNullOrEmpty(((CompositeType)Model.ReturnType).PolymorphicDiscriminator))
-      {
-      @:result = new client._models.discriminators[parsedResponse[@(((CompositeType)Model.ReturnType).PolymorphicDiscriminator)']]();
-      }
-      else
-      {
-      @:result = new client._models['@(Model.ReturnType.Name)']();
-      }
-  }
-  @{
-      var deserializeBody = Model.GetDeserializationString(Model.ReturnType);
-      if (!string.IsNullOrWhiteSpace(deserializeBody))
-      {
-@:    if (parsedResponse !== null && parsedResponse !== undefined) {
-@:        @(deserializeBody)
-@:      }
-      }
-   }
-    } catch (error) {
-      @(Model.DeserializationError)
-    }
+    @(Model.DeserializeResponse(Model.ReturnType))
   }
       </text>
   }
   @if (Model.ReturnType != null && Model.DefaultResponse != null && !Model.Responses.Any())
   {
-@:  var parsedResponse = null;
-@:  try {
-@:    parsedResponse = JSON.parse(responseBody);
-  if (Model.DefaultResponse is CompositeType)
-  {
-      if (!string.IsNullOrEmpty(((CompositeType)Model.DefaultResponse).PolymorphicDiscriminator))
-      {
-    @:result = new client._models.discriminators[parsedResponse[@(((CompositeType)Model.DefaultResponse).PolymorphicDiscriminator)']]();
-      }
-      else
-      {
-    @:result = new client._models['@(Model.DefaultResponse.Name)']();
-      }
-  }
-    var deserializeBody = Model.GetDeserializationString(Model.DefaultResponse);
-    if (!string.IsNullOrWhiteSpace(deserializeBody))
-    {
-@:    if (parsedResponse !== null && parsedResponse !== undefined) {
-@:      @(deserializeBody)
-@:    }
-    }
-@:  } catch (error) {
-@:@(Model.DeserializationError)
-@:}
+    @(Model.DeserializeResponse(Model.DefaultResponse))
   }
   @EmptyLine
 
