--- a/AutoRest/Generators/NodeJS/NodeJS/Templates/ModelTemplate.cshtml
+++ b/AutoRest/Generators/NodeJS/NodeJS/Templates/ModelTemplate.cshtml
@@ -26,14 +26,10 @@
  * Initializes a new instance of the @(Model.Name) class.
  * @@constructor
 @WrapComment(" * ", Model.Documentation)
-@foreach (var parameter in Model.DocumentationProperties)
-{
- @:* @@member {@ModelTemplateModel.GetPropertyDocumentationType(parameter)} @ModelTemplateModel.GetPropertyDocumentationName(parameter) @parameter.Documentation
- @:*
-}
+@(Model.CreatePropertyDocumentation())
  */
 function @(Model.Name)(parameters) {
-@{ 
+@{
   if (Model.BaseModelType != null)
   {
   @:@(Model.Name)['super_'].call(this, parameters);
