--- a/AutoRest/Generators/NodeJS/NodeJS/Templates/MethodTemplate.cshtml
+++ b/AutoRest/Generators/NodeJS/NodeJS/Templates/MethodTemplate.cshtml
@@ -26,7 +26,8 @@
  *
  *                      {Error}  err        - The Error object if an error occurred, null otherwise.
  *
- *                      {object} [result]   - The deserialized result object if an error did not occur.
+ *                      {@Model.DocumentReturnTypeString} [result]   - The deserialized result object.
+ @WrapComment(" *                      ", Model.ReturnTypeInfo)
  *
  *                      {object} [request]  - The HTTP Request object if an error did not occur.
  *
