Fix bug: The Content-Type should use the produces in the spec.

--- a/AutoRest/Generators/NodeJS/NodeJS/Templates/MethodTemplate.cshtml
+++ b/AutoRest/Generators/NodeJS/NodeJS/Templates/MethodTemplate.cshtml
@@ -90,7 +90,7 @@
       }
     }
   }
-  httpRequest.headers['Content-Type'] = 'application/json; charset=utf-8';
+  httpRequest.headers['Content-Type'] = '@(Model.ContentType)';
 
   @if (Model.RequestBody != null)
   {
